<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu">

    <fragment
        android:id="@+id/fragment_group"
        android:icon = "@drawable/ic_group"
        android:title="@string/group"
        tools:layout="@layout/fragment_group"
        />

    <fragment
        android:id="@+id/fragment_note"
        android:icon = "@drawable/ic_note"
        android:title = "@string/note"
        tools:layout="@layout/fragment_note"
        />

    <fragment
        android:id="@+id/fragment_settings"
        android:icon = "@drawable/ic_settings"
        android:title = "@string/settings"
        tools:layout="@layout/fragment_settings"
        />
</navigation>